--- a/index.html
+++ b/index.html
@@ -1,14 +1,195 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>AVR Proyecciones Ambientales</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400&display=swap" rel="stylesheet">
+   
+  
+  <!-- Estilos personalizados -->
+  <link href="css/estilos.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Bienvenido a mi página web</h1>
-    <p>Este es un index básico en HTML.</p>
 
-    <a href="about.html">Ir a la página Acerca de</a>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top shadow-sm">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">
+      <img src="Img/logo.png" alt="Logo AVR" width="40" height="40" class="me-2">
+      AVR
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
+       	<li class="nav-item"><a class="nav-link" href="Vistas/Historia.html">Historia</a></li>
+        <li class="nav-item"><a class="nav-link" href="Vistas/Gestion.html">Gestión de Residuos</a></li>
+        <li class="nav-item"><a class="nav-link" href="Vistas/Servicios.html">Servicios</a></li>
+        <li class="nav-item"><a class="nav-link" href="Vistas/Nosotros.html">Sobre Nosotros</a></li>
+        <li class="nav-item"><a class="nav-link" href="Vistas/Contacto.html">Contacto</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+  <!-- Hero con título arriba -->
+  <section class="hero d-flex align-items-center" style="padding-top:80px;">
+    <div class="container">
+      <h1 class="display-5 fw-bold text-success">AVR Proyecciones Ambientales</h1>
+      <p class="lead">Gestión integral de residuos para un mundo más limpio y sostenible</p>
+    </div>
+  </section>
+
+  <!-- Slider de imágenes -->
+  <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="Img/slide1.jpg" class="d-block w-100" alt="Slide 1">
+      </div>
+      <div class="carousel-item">
+        <img src="Img/slide2.jpg" class="d-block w-100" alt="Slide 2">
+      </div>
+      <div class="carousel-item">
+        <img src="Img/slide3.jpg" class="d-block w-100" alt="Slide 3">
+      </div>
+    </div>
+  </div>
+
+<!-- ¿Quiénes Somos? -->
+<section class="quienes-somos p-5">
+  <div class="container">
+    <div class="card shadow-lg border-0 rounded-4 p-4" style="background-color:#e3f2fd;">
+      <h2 class="text-center mb-4" style="font-family: 'Raleway', sans-serif; color:#1b5e20;">
+        ¿Quiénes Somos?
+      </h2>
+      <p class="lead text-center" style="font-family: 'Roboto', sans-serif; color:#2e2e2e;">
+        AVR Proyecciones Ambientales S.A.S es una empresa dedicada a la recolección, transporte, manejo y disposición final de residuos sólidos aprovechables. 
+        Nuestro plan de negocio se enfoca en apoyar los procesos productivos, disminuir los residuos ordinarios y aumentar los aprovechables, promoviendo prácticas amigables con el medio ambiente.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- Objetivo (oscuro, igual que antes) -->
+<section class="objetivo p-5 text-white text-center">
+  <div class="container">
+    <div class="p-4 rounded-4 shadow-lg" style="background-color:#2e2e33;">
+      <h2 class="text-white" style="font-family: 'Raleway', sans-serif;">Nuestro Objetivo</h2>
+      <p class="mt-3" style="font-family: 'Roboto', sans-serif;">
+        <strong>Tenemos como principal objetivo</strong> apoyar e incentivar conciencia ambiental 
+        para <em>minimizar los diferentes impactos</em> que se puedan llegar a presentar 
+        en cada uno de los procesos productivos de la industria y que son perjudiciales 
+        para el medio ambiente.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- Misión y Visión -->
+<section class="mision-vision p-5">
+  <div class="container">
+    <h2 class="text-center mb-4" style="font-family: 'Raleway', sans-serif; color:#1565c0;">Misión y Visión</h2>
+    <div class="row g-4">
+      <div class="col-md-6">
+        <div class="card shadow-lg border-0 rounded-4 p-4" style="background-color:#f1f8e9;">
+          <h4 class="text-success" style="font-family: 'Raleway', sans-serif;">Misión</h4>
+          <p style="font-family: 'Roboto', sans-serif; color:#2e2e2e;">
+            Brindar soluciones integrales en la gestión de residuos sólidos aprovechables, apoyando los procesos productivos de la industria, para fomentar una cultura ambiental responsable y sostenible.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card shadow-lg border-0 rounded-4 p-4" style="background-color:#fff3e0;">
+          <h4 class="text-success" style="font-family: 'Raleway', sans-serif;">Visión</h4>
+          <p style="font-family: 'Roboto', sans-serif; color:#2e2e2e;">
+            Ser líderes a nivel nacional en la transformación y valorización de residuos, contribuyendo activamente a la economía circular y al desarrollo sostenible del país.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ¿Sabías que? -->
+<section class="sabias-que p-5">
+  <div class="container">
+    <h2 class="text-center mb-4" style="font-family: 'Raleway', sans-serif; color:#1b5e20;">¿Sabías que?</h2>
+
+    <!-- 1 -->
+    <div class="row align-items-center mb-4">
+      <div class="col-md-6">
+        <div class="card shadow-lg p-4 border-0 rounded-4" style="background-color:#e8f5e9;">
+          <p class="lead" style="font-family: 'Roboto', sans-serif;">Transformamos residuos plásticos en nuevas materias primas.</p>
+        </div>
+      </div>
+      <div class="col-md-6 text-center">
+        <img src="Img/reciclaje1.jpg" class="img-fluid rounded-4 shadow-lg" alt="Reciclaje">
+      </div>
+    </div>
+
+    <!-- 2 -->
+    <div class="row align-items-center flex-md-row-reverse mb-4">
+      <div class="col-md-6">
+        <div class="card shadow-lg p-4 border-0 rounded-4" style="background-color:#fce4ec;">
+          <p class="lead" style="font-family: 'Roboto', sans-serif;">Nuestra planta funciona <strong>24/7</strong> para maximizar el reciclaje.</p>
+        </div>
+      </div>
+      <div class="col-md-6 text-center">
+        <img src="Img/reciclaje2.jpg" class="img-fluid rounded-4 shadow-lg" alt="Planta de reciclaje">
+      </div>
+    </div>
+
+    <!-- 3 -->
+    <div class="row align-items-center mb-4">
+      <div class="col-md-6">
+        <div class="card shadow-lg p-4 border-0 rounded-4" style="background-color:#fffde7;">
+          <p class="lead" style="font-family: 'Roboto', sans-serif;">Contamos con <strong>maquinaria propia</strong> para el proceso de transformación.</p>
+        </div>
+      </div>
+      <div class="col-md-6 text-center">
+        <img src="Img/reciclaje3.jpg" class="img-fluid rounded-4 shadow-lg" alt="Maquinaria">
+      </div>
+    </div>
+
+    <!-- 4 -->
+    <div class="row align-items-center flex-md-row-reverse mb-4">
+      <div class="col-md-6">
+        <div class="card shadow-lg p-4 border-0 rounded-4" style="background-color:#e3f2fd;">
+          <p class="lead" style="font-family: 'Roboto', sans-serif;">Incentivamos la fabricación de productos a partir de plástico reciclado.</p>
+        </div>
+      </div>
+      <div class="col-md-6 text-center">
+        <img src="Img/reciclaje4.jpg" class="img-fluid rounded-4 shadow-lg" alt="Plásticos reciclados">
+      </div>
+    </div>
+
+    <!-- 5 -->
+    <div class="row align-items-center mb-4">
+      <div class="col-md-6">
+        <div class="card shadow-lg p-4 border-0 rounded-4" style="background-color:#f1f8e9;">
+          <p class="lead" style="font-family: 'Roboto', sans-serif;">Contribuimos activamente al desarrollo de la economía circular en Colombia.</p>
+        </div>
+      </div>
+      <div class="col-md-6 text-center">
+        <img src="Img/reciclaje5.jpg" class="img-fluid rounded-4 shadow-lg" alt="Economía circular">
+      </div>
+    </div>
+  </div>
+</section>
+
+
+  <!-- Footer -->
+  <footer class="bg-success text-white text-center p-3">
+    <p class="mb-0">&copy; 2025 AVR Proyecciones Ambientales S.A.S - Todos los derechos reservados</p>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
