Se añaden las demas pestañas, aun faltan imagenes)

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       </button>
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="#gestion">Gestión de Residuos</a></li>
-          <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
-          <li class="nav-item"><a class="nav-link" href="#nosotros">Sobre Nosotros</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="Vistas/Gestion.html">Gestión de Residuos</a></li>
+          <li class="nav-item"><a class="nav-link" href="Vistas/Servicios.html">Servicios</a></li>
+          <li class="nav-item"><a class="nav-link" href="Vistas/Nosotros.html">Sobre Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link" href="Vistas/Contacto.html">Contacto</a></li>
         </ul>
       </div>
     </div>
@@ -58,7 +58,7 @@
 
   <main class="main-content">
     
-    <section class="content-section p-5" id="quienes-somos">
+    <section class="content-section p-5 " id="quienes-somos">
       <div class="container">
         <div class="content-card shadow-lg border-0 rounded-4 p-4">
           <h2 class="text-center mb-4 text-success">LA EMPRESA</h2>
