Se agrega INGECAP

--- a/Vistas/Contacto.html
+++ b/Vistas/Contacto.html
@@ -54,7 +54,7 @@
           <p class="lead">Si tienes alguna pregunta o necesitas una asesoría, no dudes en contactarnos:</p>
           <ul class="list-unstyled lead mt-4">
             <li><i class="bi bi-person-fill me-2"></i> Gerente General: Armando Gordillo</li>
-            <li><i class="bi bi-phone-fill me-2"></i> Teléfono: (57) 310 750 6739</li>
+            <li><i class="bi bi-phone-fill me-2"></i> Teléfono: (+57) 310 750 6739</li>
             <li><i class="bi bi-envelope-fill me-2"></i> Email: elmer.tecniambientalsas@gmail.com</li>
            <li><i class="bi bi-globe me-2"></i> Sitio Web: <a href="https://avr-empresas.netlify.app">avr-empresas.netlify.app</a></li>    
           </ul>
