--- a/index.html
+++ b/index.html
@@ -106,6 +106,20 @@
       </div>
     </section>
 
+<section class="content-section p-5">
+      <div class="container">
+        <div class="dark-card shadow-lg border-0 rounded-4 p-4 text-center">
+          <h2 class="mb-4 text-white">Alianza Estratégica</h2>
+          <img src="Img/ingecap-logo.jpg" alt="Logo de INGECAP" class="img-fluid mb-4" style="max-width: 350px;">
+          <h4 class="text-primary">INGECAP Ingeniería y Aplicaciones</h4>
+          <p class="lead text-white">
+            AVR y INGECAP se unen para ofrecer soluciones de ingeniería y consultoría que optimizan la gestión de residuos, combinando experiencia técnica con sostenibilidad.
+          </p>
+          <a href="Vistas/ingecap.html" class="btn btn-primary btn-lg mt-3">Ver más sobre INGECAP</a>
+        </div>
+      </div>
+    </section>
+    
     <section class="sabias-que p-5" id="sabias-que">
       <div class="container">
         <div class="sabias-que-card rounded-4 shadow-lg p-4">
