Se arreglan cosas de INGECAP

--- a/Vistas/ingecap.html
+++ b/Vistas/ingecap.html
@@ -14,7 +14,7 @@
   <style>
     .carousel-item img {
       height: 300px;
-      object-fit: contain; /* Ahora las imágenes se ajustan sin cortarse */
+      object-fit: contain;
     }
   </style>
 
@@ -51,7 +51,7 @@
           <h2 class="text-white mb-4">INGENIERÍA Y APLICACIONES</h2>
           <img src="../Img/ingecap-logo.jpg" alt="Logo de INGECAP" class="img-fluid mb-4" style="max-width: 350px;">
           <p class="lead text-white">
-            Somos una empresa de consultoría e ingeniería especializada en la elaboración de estudios y diseños, consultoría y soluciones integrales de proyectos ambientales.
+            Somos una empresa de consultoría e ingeniería especializada en la elaboración de estudios y diseños, consultoría y soluciones integrales de proyectos.
           </p>
         </div>
       </div>
@@ -147,8 +147,8 @@
               </div>
             </div>
             <div class="col-md-6">
-              <h4 class="text-primary">Fabricación de Estructuras Metálicas</h4>
-              <p class="lead">Convertimos ideas en realidad con nuestra fabricación de piezas y estructuras metálicas, diseñadas con precisión para los proyectos más exigentes.</p>
+              <h4 class="text-primary">Fabricación de Equipos Industriales</h4>
+              <p class="lead">Convertimos ideas en realidad con nuestra fabricación de piezas y estructuras metálicas, diseñadas con precisión para los proyectos más exigentes. (Compactadores de cartón, molinos de triturador de PET, ect...)</p>
             </div>
           </div>
           
