--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-0 transparent-navbar">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top transparent-navbar">
     <div class="container-fluid navbar-card">
       <a class="navbar-brand d-lg-none" href="#">
         <img src="Img/logo.png" alt="Logo AVR" width="40" height="40" class="me-2">
