--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top transparent-navbar">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-0 transparent-navbar">
     <div class="container-fluid navbar-card">
       <a class="navbar-brand d-lg-none" href="#">
         <img src="Img/logo.png" alt="Logo AVR" width="40" height="40" class="me-2">
@@ -110,7 +110,7 @@
       <div class="container">
         <div class="dark-card shadow-lg border-0 rounded-4 p-4 text-center">
           <h2 class="mb-4 text-white">Alianza Estratégica</h2>
-          <img src="Img/ingecap-logo.jpg" alt="Logo de INGECAP" class="img-fluid mb-4" style="max-width: 350px;">
+          <img src="Img/ingecap-logo.jpg" alt="Logo de INGECAP" class="img-fluid mb-4 logo-ingecap-responsive">
           <h4 class="text-primary">INGECAP Ingeniería y Aplicaciones</h4>
           <p class="lead text-white">
             AVR y INGECAP se unen para ofrecer soluciones de ingeniería y consultoría que optimizan la gestión de residuos, combinando experiencia técnica con sostenibilidad.
