Se hacen arreglos al celular

--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
         </div>
       </div>
     </section>
-
+    
 <section class="content-section p-5">
       <div class="container">
         <div class="dark-card shadow-lg border-0 rounded-4 p-4 text-center">
-          <h2 class="mb-4 text-white">Alianza Estratégica</h2>
-          <img src="Img/ingecap-logo.jpg" alt="Logo de INGECAP" class="img-fluid mb-4 logo-ingecap-responsive">
+          <h2 class="mb-4 text-primary">Alianza Estratégica</h2>
+          <img src="Img/ingecap-logo.jpg" alt="Logo de INGECAP" class="img-fluid mb-4 logo-responsive">
           <h4 class="text-primary">INGECAP Ingeniería y Aplicaciones</h4>
           <p class="lead text-white">
             AVR y INGECAP se unen para ofrecer soluciones de ingeniería y consultoría que optimizan la gestión de residuos, combinando experiencia técnica con sostenibilidad.
