--- a/Vistas/ingecap.html
+++ b/Vistas/ingecap.html
@@ -48,7 +48,7 @@
     <section class="content-section p-5 mt-n5" id="ingecap-info">
       <div class="container">
         <div class="dark-card shadow-lg border-0 rounded-4 p-4 text-center">
-          <h2 class="text-white mb-4">INGENIERÍA Y APLICACIONES</h2>
+          <h2 class="text-primary mb-4">INGENIERÍA Y APLICACIONES</h2>
           <img src="../Img/ingecap-logo.jpg" alt="Logo de INGECAP" class="img-fluid mb-4" style="max-width: 350px;">
           <p class="lead text-white">
             Somos una empresa de consultoría e ingeniería especializada en la elaboración de estudios y diseños, consultoría y soluciones integrales de proyectos.
