--- a/Vistas/Gestion.html
+++ b/Vistas/Gestion.html
@@ -33,16 +33,16 @@
     </div>
   </nav>
 
-  <main class="main-content pt-5">
+  <main class="main-content pt-0">
     <section class="hero-section position-relative overflow-hidden" style="height: 50vh;">
-      <div id="background-carousel-gestion" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div id="background-carousel-gestion" class="carousel slide carousel-fade" data-bs-ride="carousel" style="position: absolute; width: 100%; height: 100%;">
         <div class="carousel-inner">
-          <div class="carousel-item active"><img src="../Img/gestion1.jpg" class="d-block w-100 object-fit-cover" style="height: 50vh;" alt="Imagen 1 Gestión"></div>
-          <div class="carousel-item"><img src="../Img/gestion2.jpg" class="d-block w-100 object-fit-cover" style="height: 50vh;" alt="Imagen 2 Gestión"></div>
-          <div class="carousel-item"><img src="../Img/gestion3.jpg" class="d-block w-100 object-fit-cover" style="height: 50vh;" alt="Imagen 3 Gestión"></div>
+          <div class="carousel-item active"><img src="../Img/gestion1.jpg" class="d-block w-100 object-fit-cover" alt="Imagen 1 Gestión"></div>
+          <div class="carousel-item"><img src="../Img/gestion2.jpg" class="d-block w-100 object-fit-cover" alt="Imagen 2 Gestión"></div>
+          <div class="carousel-item"><img src="../Img/gestion3.jpg" class="d-block w-100 object-fit-cover" alt="Imagen 3 Gestión"></div>
         </div>
       </div>
-      <div class="hero-title-card text-center p-4 rounded-4 shadow-lg position-absolute top-50 start-50 translate-middle">
+      <div class="hero-title-card text-center p-4 rounded-4 shadow-lg position-absolute top-50 start-50 translate-middle" style="z-index: 5;">
         <h1 class="display-3 fw-bold text-white">Gestión de Residuos</h1>
       </div>
     </section>
