Se arreglan imagnes y demas

--- a/Vistas/Contacto.html
+++ b/Vistas/Contacto.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-0 transparent-navbar">
     <div class="container-fluid navbar-card">
-      <a class="navbar-brand d-lg-none" href="#">
+      <a class="navbar-brand " href="#">
         <img src="../Img/logo.png" alt="Logo AVR" width="40" height="40" class="me-2">
         AVR
       </a>
@@ -33,13 +33,13 @@
     </div>
   </nav>
 
-  <main class="main-content pt-5">
+  <main class="main-content pt-0">
     <section class="hero-section position-relative overflow-hidden" style="height: 50vh;">
-      <div id="background-carousel-contacto" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <div id="background-carousel-contacto" class="carousel slide carousel-fade" data-bs-ride="carousel" style="position: absolute; width: 100%; height: 100%;">
         <div class="carousel-inner">
-          <div class="carousel-item active"><img src="../Img/contacto1.jpg" class="d-block w-100 object-fit-cover" style="height: 50vh;" alt="Imagen 1 Contacto"></div>
-          <div class="carousel-item"><img src="../Img/contacto2.jpg" class="d-block w-100 object-fit-cover" style="height: 50vh;" alt="Imagen 2 Contacto"></div>
-          <div class="carousel-item"><img src="../Img/contacto3.jpg" class="d-block w-100 object-fit-cover" style="height: 50vh;" alt="Imagen 3 Contacto"></div>
+          <div class="carousel-item active"><img src="../Img/contacto1.jpg" class="d-block w-100 object-fit-cover"  alt="Imagen 1 Contacto"></div>
+          <div class="carousel-item"><img src="../Img/contacto2.jpg" class="d-block w-100 object-fit-cover"  alt="Imagen 2 Contacto"></div>
+          <div class="carousel-item"><img src="../Img/contacto3.jpg" class="d-block w-100 object-fit-cover" alt="Imagen 3 Contacto"></div>
         </div>
       </div>
       <div class="hero-title-card text-center p-4 rounded-4 shadow-lg position-absolute top-50 start-50 translate-middle">
