--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-0 transparent-navbar">
     <div class="container-fluid navbar-card">
-      <a class="navbar-brand d-lg-none" href="#">
+      
+      <a class="navbar-brand" href="#"> 
         <img src="Img/logo.png" alt="Logo AVR" width="40" height="40" class="me-2">
         AVR
       </a>
@@ -42,9 +43,7 @@
     </div>
   </nav>
 
-  <div class="logo-area-desktop d-none d-lg-block">
-    <img src="Img/logo.png" alt="Logo AVR" class="logo-desktop">
-  </div>
+  
 
   <section class="hero-section d-flex align-items-center justify-content-center" id="inicio">
     <div class="hero-title-card text-center p-4 rounded-4 shadow-lg">
