--- a/Vistas/Gestion.html
+++ b/Vistas/Gestion.html
@@ -14,7 +14,7 @@
   
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top p-0 transparent-navbar">
     <div class="container-fluid navbar-card">
-      <a class="navbar-brand d-lg-none" href="#">
+      <a class="navbar-brand " href="#">
         <img src="../Img/logo.png" alt="Logo AVR" width="40" height="40" class="me-2">
         AVR
       </a>
