--- a/Vistas/Nosotros.html
+++ b/Vistas/Nosotros.html
@@ -51,7 +51,11 @@
     <section class="content-section p-5">
       <div class="container">
         <div class="content-card shadow-lg border-0 rounded-4 p-4">
-          <h2 class="text-center mb-4 text-success">¿QUIÉNES SOMOS?</h2>
+          <h2 class="text-center mb-4 text-success d-flex justify-content-center align-items-center gap-3">
+  <img src="../Img/logo.png" alt="Logo AVR" width="50" height="50">
+  ¿QUIÉNES SOMOS?
+</h2>
+
           <p class="lead text-center">
             AVR Proyecciones Ambientales S.A.S es una empresa dedicada a la recolección, transporte, manejo y disposición final de residuos sólidos aprovechables.
             Nuestro plan de negocio se enfoca en apoyar sus procesos productivos con el fin de desarrollar prácticas amigables en pro de ayuda al medio ambiente, y hacer que se disminuya la cantidad de residuos ordinarios y aumentar los residuos aprovechables.
