Se arregla el arreglo de la iamgen

--- a/Vistas/Nosotros.html
+++ b/Vistas/Nosotros.html
@@ -51,20 +51,30 @@
     <section class="content-section p-5">
       <div class="container">
         <div class="content-card shadow-lg border-0 rounded-4 p-4">
-          <h2 class="text-center mb-4 text-success d-flex justify-content-center align-items-center gap-3">
-  <img src="../Img/logo.png" alt="Logo AVR" width="50" height="50">
-  ¿QUIÉNES SOMOS?
-</h2>
+  <div class="row align-items-center">
+    
+    <div class="col-md-4 text-center mb-4 mb-md-0">
+      <img src="../Img/logo.png" alt="Logo AVR" class="img-fluid" style="max-width: 220px;">
+    </div>
 
-          <p class="lead text-center">
-            AVR Proyecciones Ambientales S.A.S es una empresa dedicada a la recolección, transporte, manejo y disposición final de residuos sólidos aprovechables.
-            Nuestro plan de negocio se enfoca en apoyar sus procesos productivos con el fin de desarrollar prácticas amigables en pro de ayuda al medio ambiente, y hacer que se disminuya la cantidad de residuos ordinarios y aumentar los residuos aprovechables.
-          </p>
-          <p class="lead text-center mt-4">
-            Tenemos como principal objetivo apoyar e incentivar conciencia ambiental para minimizar los diferentes impactos que se puedan llegar a presentar en cada uno de los procesos productivos de la industria y que son perjudiciales para el medio ambiente.
-          </p>
-        </div>
-      </div>
+    <div class="col-md-8">
+      <h2 class="mb-4 text-success">¿QUIÉNES SOMOS?</h2>
+
+      <p class="lead">
+        AVR Proyecciones Ambientales S.A.S es una empresa dedicada a la recolección, transporte, manejo y disposición final de residuos sólidos aprovechables.
+        Nuestro plan de negocio se enfoca en apoyar sus procesos productivos con el fin de desarrollar prácticas amigables en pro de ayuda al medio ambiente,
+        y hacer que se disminuya la cantidad de residuos ordinarios y aumentar los residuos aprovechables.
+      </p>
+
+      <p class="lead mt-4">
+        Tenemos como principal objetivo apoyar e incentivar conciencia ambiental para minimizar los diferentes impactos que se puedan llegar a presentar
+        en cada uno de los procesos productivos de la industria y que son perjudiciales para el medio ambiente.
+      </p>
+    </div>
+
+  </div>
+</div>
+
     </section>
 
     <footer class="bg-success text-white text-center p-3">
