Se arregla responsive

--- a/Vistas/Nosotros.html
+++ b/Vistas/Nosotros.html
@@ -54,7 +54,8 @@
   <div class="row align-items-center">
     
     <div class="col-md-4 text-center mb-4 mb-md-0">
-      <img src="../Img/logo.png" alt="Logo AVR" class="img-fluid" style="max-width: 220px;">
+     <img src="../Img/logo.png" alt="Logo AVR" class="img-fluid logo-nosotros">
+
     </div>
 
     <div class="col-md-8">
